infrastructure/gateway-api/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: argocd
spec:
  gatewayClassName: aws-alb

  listeners:
    - name: http
      port: 80
      protocol: HTTP

      allowedRoutes:
        namespaces:
          from: All
